[Fix] iPad on Landscape, screen 5 text overlap

--- a/source/stylesheets/collections.scss
+++ b/source/stylesheets/collections.scss
@@ -128,6 +128,7 @@ body.parallax.portrait {
 .t300   {top: 300px;}
 .t320   {top: 320px;}
 .t330   {top: 330px;}
+.t360   {top: 360px;}
 .t500   {top: 500px;}
 .t530   {top: 530px;}
 .t600   {top: 600px;}
